2005-07-08 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * A compile fix for php4 (bug #1235017)

2005-07-07 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added get_zend_destroy_property_info function to ea_restore.h
        * Code refactoring needed for the new encoder. Moved all store/calc
          functions to ea_store.c and all restore/fixup functions to ea_restore.c

2005-07-06 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * A compile fix for zend engine 1.
        * Documented namespace option
        * New debug/log code. Make the code a lot cleaner and easier
          for the user to debug eaccelerator.

2005-06-27 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed a buffer overflow in eaccelerator.c and cache.c. A string longer
          then 8 bytes was copied in a char array of length 8. This isn't a
          security risk because the overflowed bytes were directly overwritten
          by other values. This fixes bug 1228096 which was caused by the 
          bufferoverflow detection in FC4. 
          http://gcc.gnu.org/ml/gcc-patches/2004-09/msg02055.html

2005-06-24 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * The future check is removed because mtime are only checked on changes
          so caching files from the future isn't a problem.

2005-06-23 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Applied patch 1226111
        * Added a warning message when php scripts have a modification time in
          in the future and the debug is enabled.

2005-06-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Set the test value shared memory to 32mb instead of 64mb because the
          test will fail on 2.6 kernels where 32mb is the default value. (#1203253)
        * Reverted the patch for the gc_maxlifetime setting when using
          user functions for the session handler. I can't find a way to